--- a/Templates/swifty_viper/Code/View/viewcontroller.swift.liquid
+++ b/Templates/swifty_viper/Code/View/viewcontroller.swift.liquid
@@ -11,6 +11,7 @@ import UIKit
 class {{ module_info.name }}ViewController: UIViewController, {{module_info.name}}ViewInput {
 
     var output: {{ module_info.name }}ViewOutput!
+    // MARK: IBOutlet
 
     // MARK: Life cycle
     override func viewDidLoad() {
