--- a/HobbyApp/PresentationLayer/Modules/Login/View/Login.storyboard
+++ b/HobbyApp/PresentationLayer/Modules/Login/View/Login.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bBe-HW-oxE">
-                                <rect key="frame" x="20" y="240" width="335" height="56"/>
+                                <rect key="frame" x="0.0" y="611" width="375" height="56"/>
                                 <color key="backgroundColor" red="0.99215686274509807" green="0.3411764705882353" blue="0.22352941176470587" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="56" id="33B-o6-MUU"/>
@@ -46,7 +46,7 @@
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="email"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="paddingLeft">
                                         <real key="value" value="30"/>
@@ -58,12 +58,12 @@
                         <constraints>
                             <constraint firstItem="bF9-B5-tLr" firstAttribute="trailing" secondItem="UhQ-hu-XNM" secondAttribute="trailing" constant="20" id="05t-5L-aNl"/>
                             <constraint firstItem="UhQ-hu-XNM" firstAttribute="leading" secondItem="bF9-B5-tLr" secondAttribute="leading" constant="20" id="0tC-oY-xzl"/>
-                            <constraint firstItem="bBe-HW-oxE" firstAttribute="top" secondItem="UhQ-hu-XNM" secondAttribute="bottom" constant="30" id="6Fa-NV-aJU"/>
+                            <constraint firstItem="bF9-B5-tLr" firstAttribute="trailing" secondItem="bBe-HW-oxE" secondAttribute="trailing" id="EMl-gQ-FwM"/>
                             <constraint firstItem="UhQ-hu-XNM" firstAttribute="top" secondItem="bF9-B5-tLr" secondAttribute="top" constant="90" id="LBK-qt-GbF"/>
                             <constraint firstItem="7e4-6D-zBH" firstAttribute="leading" secondItem="bF9-B5-tLr" secondAttribute="leading" constant="20" id="RBE-9v-xrd"/>
-                            <constraint firstItem="bBe-HW-oxE" firstAttribute="leading" secondItem="bF9-B5-tLr" secondAttribute="leading" constant="20" id="SnC-kX-tjb"/>
                             <constraint firstItem="bF9-B5-tLr" firstAttribute="trailing" secondItem="7e4-6D-zBH" secondAttribute="trailing" constant="20" id="V1x-1P-Odk"/>
-                            <constraint firstItem="bF9-B5-tLr" firstAttribute="trailing" secondItem="bBe-HW-oxE" secondAttribute="trailing" constant="20" id="gra-hY-Rph"/>
+                            <constraint firstItem="bBe-HW-oxE" firstAttribute="leading" secondItem="bF9-B5-tLr" secondAttribute="leading" id="Z10-hT-Fng"/>
+                            <constraint firstItem="bF9-B5-tLr" firstAttribute="bottom" secondItem="bBe-HW-oxE" secondAttribute="bottom" id="ZsC-0y-ZNS"/>
                             <constraint firstItem="UhQ-hu-XNM" firstAttribute="top" secondItem="7e4-6D-zBH" secondAttribute="bottom" constant="30" id="m7R-vh-Jdv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bF9-B5-tLr"/>
@@ -71,6 +71,7 @@
                     <navigationItem key="navigationItem" id="HvM-14-hXD"/>
                     <connections>
                         <outlet property="emailTextField" destination="UhQ-hu-XNM" id="zhC-6d-Au9"/>
+                        <outlet property="keyboardBottomConstraint" destination="ZsC-0y-ZNS" id="KfU-AJ-NQh"/>
                         <outlet property="loginButton" destination="bBe-HW-oxE" id="2mA-IU-NaU"/>
                         <segue destination="97l-8G-YGO" kind="show" identifier="toToken" id="zvl-jJ-Nt0"/>
                     </connections>
